# lamp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: adder_circuits.c  logic_gates.c
src/: main.c
src/linear_algebra/: lamp_matrix.c  lamp_matrix.h
src/neural_network/: lamp_nn.c  lamp_nn.h
tests/: main.c
